<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtClueGuess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderWordGuess"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@id/btnClue1"
        app:layout_constraintEnd_toStartOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSubmit"
        style="@style/pressableImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/submitDescription"
        android:src="@drawable/ic_check_circle_24px"
        app:layout_constraintBottom_toTopOf="@id/btnClue1"
        app:layout_constraintEnd_toStartOf="@id/btnBackspace"
        app:layout_constraintStart_toEndOf="@id/txtClueGuess"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBackspace"
        style="@style/pressableImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backspaceDescription"
        android:src="@drawable/ic_backspace_24px"
        app:layout_constraintBottom_toTopOf="@id/btnClue1"
        app:layout_constraintEnd_toStartOf="@id/btnClear"
        app:layout_constraintStart_toEndOf="@id/btnSubmit"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnClear"
        style="@style/pressableImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/clearDescription"
        android:src="@drawable/ic_clear_24px"
        app:layout_constraintBottom_toTopOf="@id/btnClue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBackspace"
        app:layout_constraintTop_toTopOf="parent" />

    <net.furrybrigade.ttwist.ToggleClueButton
        android:id="@+id/btnClue1"
        style="@style/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderSingleChar"
        app:layout_constraintBottom_toTopOf="@+id/btnShuffle"
        app:layout_constraintEnd_toStartOf="@id/btnClue2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />

    <net.furrybrigade.ttwist.ToggleClueButton
        android:id="@+id/btnClue2"
        style="@style/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderSingleChar"
        app:layout_constraintBottom_toTopOf="@+id/btnShuffle"
        app:layout_constraintEnd_toStartOf="@id/btnClue3"
        app:layout_constraintStart_toEndOf="@id/btnClue1"
        app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />

    <net.furrybrigade.ttwist.ToggleClueButton
        android:id="@+id/btnClue3"
        style="@style/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderSingleChar"
        app:layout_constraintBottom_toTopOf="@+id/btnShuffle"
        app:layout_constraintEnd_toStartOf="@id/btnClue4"
        app:layout_constraintStart_toEndOf="@id/btnClue2"
        app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />

    <net.furrybrigade.ttwist.ToggleClueButton
        android:id="@+id/btnClue4"
        style="@style/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderSingleChar"
        app:layout_constraintBottom_toTopOf="@+id/btnShuffle"
        app:layout_constraintEnd_toStartOf="@id/btnClue5"
        app:layout_constraintStart_toEndOf="@id/btnClue3"
        app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />

    <net.furrybrigade.ttwist.ToggleClueButton
        android:id="@+id/btnClue5"
        style="@style/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderSingleChar"
        app:layout_constraintBottom_toTopOf="@+id/btnShuffle"
        app:layout_constraintEnd_toStartOf="@id/btnClue6"
        app:layout_constraintStart_toEndOf="@id/btnClue4"
        app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />

    <net.furrybrigade.ttwist.ToggleClueButton
        android:id="@+id/btnClue6"
        style="@style/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderSingleChar"
        app:layout_constraintBottom_toTopOf="@+id/btnShuffle"
        app:layout_constraintEnd_toStartOf="@id/btnClue7"
        app:layout_constraintStart_toEndOf="@id/btnClue5"
        app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />

    <net.furrybrigade.ttwist.ToggleClueButton
        android:id="@+id/btnClue7"
        style="@style/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderSingleChar"
        app:layout_constraintBottom_toTopOf="@+id/btnShuffle"
        app:layout_constraintEnd_toStartOf="@id/btnClue8"
        app:layout_constraintStart_toEndOf="@id/btnClue6"
        app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />

    <net.furrybrigade.ttwist.ToggleClueButton
        android:id="@+id/btnClue8"
        style="@style/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/holderSingleChar"
        app:layout_constraintBottom_toTopOf="@+id/btnShuffle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnClue7"
        app:layout_constraintTop_toBottomOf="@id/txtClueGuess" />

    <Button
        android:id="@+id/btnShuffle"
        style="@style/pressableButton.Big"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnShuffle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClue1" />
</androidx.constraintlayout.widget.ConstraintLayout>